fix: Pick up CSS changes from https://github.com/martinthomson/rfc-txt-html (#4520)
* fix: Remove superfluous scrollbars

* fix: Show email links for authors

* fix: Only show "email authors" button for latest reversion

* fix: Remove duplicate code, fix nav scrolling

* feat: Add RFCs to revision lists

* feat: Add pref option to control dependency inlining

* fix: Add analytical tags

* feat: Notify user of rendering inconsistencies

* feat: Split out bootstrap-icons when not inlining dependencies

* fix: Revision list and minor other fixes

* feat: Show stream logos when possible

* fix: Pick up CSS changes from https://github.com/martinthomson/rfc-txt-html

--- a/ietf/static/css/document_html.scss
+++ b/ietf/static/css/document_html.scss
@@ -163,7 +163,7 @@ $tooltip-margin: inherit !default;
 
     .bcp14 {
         font-weight: bold;
-        color: $gray-700;
+        // color: $gray-700;
     }
 }
 
