--- a/ietf/static/css/document_html_txt.scss
+++ b/ietf/static/css/document_html_txt.scss
@@ -30,11 +30,20 @@
 }
 
 .xml2rfc {
-
+// body {
+//   color: black;
+//   font-family: monospace;
+//   font-size: 1em;
   line-height: var(--line);
   width: 72ch;
 
-h1, h2, h3, h4, h5, h6 {
+  // margin: var(--line) 3ch;
+  margin-top: var(--line);
+  margin-right: 3ch;
+  margin-bottom: var(--line);
+  margin-left: 3ch;
+
+h1, h2, h3, h4, h5 {
   font-weight: bold;
   font-size: inherit;
   line-height: inherit;
@@ -75,10 +84,8 @@ blockquote {
   margin: 0;
   display: grid;
   grid-template-columns: 47ch 24ch;
-  column-gap: 1ch;
-  grid-auto-flow: column;
   grid-auto-rows: auto;
-  row-gap: 0;
+  gap: 0 1ch;
 }
 #identifiers dt {
   margin: 0 1ch 0 0;
@@ -86,8 +93,12 @@ blockquote {
   display: inline-block;
 }
 #identifiers dd {
+  grid-column: 1;
   margin: 0;
   width: 47ch;
+  /* HAXX: this gets around the lack of text-content-trim support */
+  display: flex;
+  flex-wrap: wrap;
 }
 #identifiers dd::before {
   margin: 0 1ch 0 0;
@@ -126,11 +137,6 @@ blockquote {
   padding-left: 8ch;
   width: 39ch;
 }
-#identifiers dd:is(.updates, .obsoletes) {
-  /* HAXX: this gets around the lack of text-content-trim support */
-  display: flex;
-  flex-wrap: wrap;
-}
 #identifiers dd:is(.updates, .obsoletes) a {
   margin: 0 0 0 1ch;
 }
@@ -153,9 +159,11 @@ blockquote {
   grid-area: 1 / 2 / 100 / 3;
   width: 24ch;
   text-align: right;
+  display: block;
 }
 
 #title {
+  clear: left;
   text-align: center;
   margin-top: 2em;
 }
@@ -218,10 +226,12 @@ dt {
   float: left;
   clear: left;
   margin: 0 2ch 0 0;
+  break-after: avoid;
 }
 dd {
   // margin: var(--paragraph);
   @include margin-paragraph;
+  break-before: avoid;
 }
 dl.compact dt, dl.compact dd {
   margin-top: 0;
@@ -249,11 +259,9 @@ div.artwork, div.sourcecode {
 }
 div.artwork.alignCenter, div.sourcecode.alignCenter {
   justify-content: center;
-  text-align: center;
 }
 div.artwork.alignRight, div.sourcecode.alignRight {
   justify-content: end;
-  text-align: end;
 }
 div.artwork::before, div.sourcecode::before {
   flex: 0 1 3ch;
@@ -263,8 +271,10 @@ div.artwork.alignRight::before, div.sourcecode.alignRight::before {
   flex-grow: 1;
 }
 div.artwork pre, div.sourcecode pre {
-  flex: 0 0 auto;
+  flex: 0 0 content;
   margin: 0;
+  max-width: 72ch;
+  overflow: auto;
 }
 div.artwork .pilcrow, div.sourcecode .pilcrow {
   flex: 0 0 1ch;
@@ -320,6 +330,9 @@ a.selfRef, a.pilcrow {
 a.relref, a.xref {
   hyphens: none;
 }
+a.relref, a.xref.cite {
+  white-space: nowrap;
+}
 .pilcrow {
   display: inline-block;
   margin-right: -1ch;
@@ -331,6 +344,11 @@ a.relref, a.xref {
 }
 * > .pilcrow[href]:hover {
   opacity: 0.6;
+}
+
+/* sup, sub */
+sup, sub {
+  line-height: 1.1;
 }
 
 /* Authors */
@@ -345,11 +363,14 @@ address {
 h2 + address {
   margin-top: 1em;
 }
-address .email {
+address .tel, address .email {
   // margin: var(--line) 0 0;
   margin-top: var(--line);
   margin-right: 0;
   margin-bottom: 0;
   margin-left: 0;
+}
+address .tel + .email {
+  margin: 0;
 }
 }
